# cv-snippets

./: .gitignore  LICENSE  README.md  main.cpp
blender/: README.md  visualize_coordinate.py
camera_calibration/: app.py  camera_calibration.cpp  camera_calibration.hpp  camera_calibration.py  gen_chessboard.py
camera_distortion_simulator/: index.html
ceres/autodiff_test/: CMakeLists.txt  main.cpp
ceres/simple_fitting/: dynamic.cpp  main.cpp
coreml/: README.md
coreml/Inceptionv3.playground/: Contents.swift
coreml/Inceptionv3.playground/playground.xcworkspace/xcuserdata/kamino.xcuserdatad/: UserInterfaceState.xcuserstate
coreml/YOLOv3.playground/: Contents.swift
coreml/YOLOv3Tiny.playground/: Contents.swift
cuda/cufft2d/: CMakeLists.txt  main.cu
cuda/solve_dense_qr/: CMakeLists.txt  main.cu
cuda/solve_sparse_batch_func/: CMakeLists.txt  main.cu
cuda/solve_sparse_least_square/: main.cu
cuda/vector_add/: CMakeLists.txt  main.cu
cuda/vector_add_eigen/: CMakeLists.txt  kernel.cu  kernel.hpp  main.cpp
docs/: index.html  snippets.md
docs/camera_calibration/: style.css
docs/camera_distortion_simulator/: index.html  src.js
docs/optmz_blog/: newton1.html  newton2.html  stat_points.html  steepest.html
docs/projector_calibration/: index.html
edsdk-sample/: main.cpp
font/: save_as_image.py
gamma_estimation/: capture_ximea.py  estimate_gamma.py
geometry/: voronoi_delaunay.py
graycode/: decode.py  gen_graycode_imgs.py  main.cpp
grpc/cpp_cmake/: CMakeLists.txt  client.cpp  server.cpp
grpc/cpp_cmake/proto/: CMakeLists.txt  helloworld.proto
map_by_lut/: CMakeLists.txt  main.cpp
media/: gif_animation.py
motive_api/: CMakeLists.txt  main.cpp
nn/mnist_tf_coreml/: exec_pb.py  h5_to_pb.py  mnist.py  pb_to_coreml.py
nn/mnist_tf_coreml/exec_coreml.playground/: Contents.swift
nn_fitting/: main.py
nn_warp_image/: c2p_dmd.csv  main.py  test.html
optimization/: lbfgs.cpp  lm.cpp  lm.py
optitrack/motive_api/: main.cpp
optitrack/natnet/: CMakeLists.txt  main.cpp  optitrack_client.cpp  optitrack_client.hpp
plotly/: sample-mesh.html  sample-mesh.py  sample-plane.html  sample-plane.py  sample-vecs.html  sample-vecs.py  sample-verts.html  sample-verts.py  template_scatter.html  template_scatter.py
pointgray/: CMakeLists.txt  FlyCaptureWrapper.cpp  FlyCaptureWrapper.h  main.cpp
projector_calibration/: main.py
protobuf/cmake_cpp/: CMakeLists.txt  main.cpp
protobuf/cmake_cpp/proto/: CMakeLists.txt
protobuf/nodejs/: convert_proto_to_js.sh  index.js  package-lock.json  package.json  user.proto
protobuf/python/: convert_proto_to_py.sh  main.py  user_pb2.py
unity/: OpenCVCameraParams.cs  OpenCVTranslate.cs
unity/native_plugin/: CMakeLists.txt  NativePluginTest.cs  mylib.cpp
web_camera_calibration/: index.html
web_camera_distortion_simulator/: index.html  src.js
web_opencv/: find_chessboard.html
web_opencv/calibrate_camera/: index.html  opencv.js
web_projector_calibration/: index.html
ximea/: main.cpp  main.py  wb_adjust.py
